--- a/recipe.yml
+++ b/recipe.yml
@@ -27,7 +27,22 @@ stages:
       packages:
       - pamu2fcfg 
       - libpam-u2f
- 
+  
+  - name: Virt-Manager
+    type: apt
+    source:
+      packages:
+      - qemu-kvm
+      - qemu-system
+      - qemu-utils
+      - libvirt-daemon-system
+      - libvirt-clients
+      - bridge-utils
+      - virt-manager
+      - looking-glass-client
+      - swtpm
+      - swtpm-tools
+
   - name: set-image-name-abroot
     type: includes
     includes:
